log
Thu 28 Mar 2024 12:35:52 AM UTC: 
 tests:  0|6
total_score: 0/70
dc461d7
Thu 28 Mar 2024 12:40:34 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f037006
Fri 29 Mar 2024 04:12:28 PM UTC: 
 list.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:24:3: error: unknown type name ‘node’; did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |   ^~~~
      |   Node
list.c:24:17: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                 ^~~~
      |                 Node
list.c:24:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:24:22: error: expected expression before ‘)’ token
   24 |   node* nodo = (node*) malloc(sizeof(node));
      |                      ^
list.c:26:7: error: request for member ‘data’ in something not a structure or union
   26 |   nodo->data = data;
      |       ^~
list.c:27:7: error: request for member ‘next’ in something not a structure or union
   27 |   nodo->next = NULL;
      |       ^~
list.c:28:7: error: request for member ‘prev’ in something not a structure or union
   28 |   nodo->prev = NULL;
      |       ^~
list.c:29:10: error: returning ‘int *’ from a function with incompatible return type ‘Node *’ [-Werror=incompatible-pointer-types]
   29 |   return nodo;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
10e9c5e
